# clay_assignment

./: .gitignore  CMakeLists.txt  KVPStorage  KVPStorageServer  KVPStorage_fin  README.md  run_ut
client/inc/: kvp_client.hpp
client/src/: CMakeLists.txt  client_main.cpp  kvp_client.cpp
common/inc/: kvp_message.h  kvp_message.hpp
common/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kvp_message.cpp
server/inc/: kvp_server.hpp  kvp_storage.hpp
server/src/: CMakeLists.txt  kvp_server.cpp  kvp_storage.cpp  server_main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run_ut_kvp_server  run_ut_kvp_storage  test_kvp_server.cpp  test_kvp_storage.cpp
test/data/: test_basic_00.txt  test_basic_01.txt  test_invalid_key_00.txt  test_quoted_value_00.txt
